--- a/requirements-streamlit.txt
+++ b/requirements-streamlit.txt
@@ -1,1 +1,5 @@
-streamlit==1.38.0 requests==2.32.3 pandas==2.2.2 pyperclip==1.9.0 python-dotenv==1.0.1
+streamlit==1.24.1
+requests==2.31.0
+pandas==2.1.0
+python-dotenv==1.0.0
+pyperclip==1.8.2
