--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,16 @@ google-generativeai==0.8.3
 streamlit-lottie==0.0.5
 requests==2.32.3
 nest_asyncio==1.6.0
+fastapi==0.115.0
+uvicorn==0.30.6
+python-dotenv==1.0.1
+tweepy==4.14.0
+requests==2.32.3
+passlib[bcrypt]==1.7.4
+cryptography==43.0.1
+pydantic==2.9.2
+
+
 
 
 
